@@ -17,9 +17,15 @@ package org.apache.solr.handler.component;
  * limitations under the License.
  */
 
+import java.util.HashMap;
+import java.util.Map;
+
 import org.apache.lucene.util.LuceneTestCase.Slow;
 import org.apache.solr.BaseDistributedSearchTestCase;
+import org.apache.solr.client.solrj.response.QueryResponse;
+import org.apache.solr.common.SolrDocumentList;
 import org.apache.solr.common.params.MoreLikeThisParams;
+import org.apache.solr.common.util.NamedList;
 import org.junit.Ignore;
 import org.junit.Test;
 
@@ -31,7 +37,6 @@ import org.junit.Test;
  * @see org.apache.solr.handler.component.MoreLikeThisComponent
  */
 @Slow
-@Ignore("fails on freebsd")
 public class DistributedMLTComponentTest extends BaseDistributedSearchTestCase {
   
   private String requestHandlerName;
@@ -51,30 +56,30 @@ public class DistributedMLTComponentTest extends BaseDistributedSearchTestCase {
   @ShardsFixed(num = 3)
   public void test() throws Exception {
     del("*:*");
-    index(id, "1", "lowerfilt", "toyota");
-    index(id, "2", "lowerfilt", "chevrolet");
-    index(id, "3", "lowerfilt", "suzuki");
-    index(id, "4", "lowerfilt", "ford");
-    index(id, "5", "lowerfilt", "ferrari");
-    index(id, "6", "lowerfilt", "jaguar");
-    index(id, "7", "lowerfilt", "mclaren moon or the moon and moon moon shine and the moon but moon was good foxes too");
-    index(id, "8", "lowerfilt", "sonata");
-    index(id, "9", "lowerfilt", "The quick red fox jumped over the lazy big and large brown dogs.");
-    index(id, "10", "lowerfilt", "blue");
-    index(id, "12", "lowerfilt", "glue");
-    index(id, "13", "lowerfilt", "The quote red fox jumped over the lazy brown dogs.");
-    index(id, "14", "lowerfilt", "The quote red fox jumped over the lazy brown dogs.");
-    index(id, "15", "lowerfilt", "The fat red fox jumped over the lazy brown dogs.");
-    index(id, "16", "lowerfilt", "The slim red fox jumped over the lazy brown dogs.");
-    index(id, "17", "lowerfilt", "The quote red fox jumped moon over the lazy brown dogs moon. Of course moon. Foxes and moon come back to the foxes and moon");
-    index(id, "18", "lowerfilt", "The quote red fox jumped over the lazy brown dogs.");
-    index(id, "19", "lowerfilt", "The hose red fox jumped over the lazy brown dogs.");
-    index(id, "20", "lowerfilt", "The quote red fox jumped over the lazy brown dogs.");
-    index(id, "21", "lowerfilt", "The court red fox jumped over the lazy brown dogs.");
-    index(id, "22", "lowerfilt", "The quote red fox jumped over the lazy brown dogs.");
-    index(id, "23", "lowerfilt", "The quote red fox jumped over the lazy brown dogs.");
-    index(id, "24", "lowerfilt", "The file red fox jumped over the lazy brown dogs.");
-    index(id, "25", "lowerfilt", "rod fix");
+    index(id, "1", "lowerfilt", "toyota", "lowerfilt1", "x");
+    index(id, "2", "lowerfilt", "chevrolet", "lowerfilt1", "x");
+    index(id, "3", "lowerfilt", "suzuki", "lowerfilt1", "x");
+    index(id, "4", "lowerfilt", "ford", "lowerfilt1", "x");
+    index(id, "5", "lowerfilt", "ferrari", "lowerfilt1", "x");
+    index(id, "6", "lowerfilt", "jaguar", "lowerfilt1", "x");
+    index(id, "7", "lowerfilt", "mclaren moon or the moon and moon moon shine and the moon but moon was good foxes too", "lowerfilt1", "x");
+    index(id, "8", "lowerfilt", "sonata", "lowerfilt1", "x");
+    index(id, "9", "lowerfilt", "The quick red fox jumped over the lazy big and large brown dogs.", "lowerfilt1", "x");
+    index(id, "10", "lowerfilt", "blue", "lowerfilt1", "x");
+    index(id, "12", "lowerfilt", "glue", "lowerfilt1", "x");
+    index(id, "13", "lowerfilt", "The quote red fox jumped over the lazy brown dogs.", "lowerfilt1", "y");
+    index(id, "14", "lowerfilt", "The quote red fox jumped over the lazy brown dogs.", "lowerfilt1", "y");
+    index(id, "15", "lowerfilt", "The fat red fox jumped over the lazy brown dogs.", "lowerfilt1", "y");
+    index(id, "16", "lowerfilt", "The slim red fox jumped over the lazy brown dogs.", "lowerfilt1", "y");
+    index(id, "17", "lowerfilt", "The quote red fox jumped moon over the lazy brown dogs moon. Of course moon. Foxes and moon come back to the foxes and moon", "lowerfilt1", "y");
+    index(id, "18", "lowerfilt", "The quote red fox jumped over the lazy brown dogs.", "lowerfilt1", "y");
+    index(id, "19", "lowerfilt", "The hose red fox jumped over the lazy brown dogs.", "lowerfilt1", "y");
+    index(id, "20", "lowerfilt", "The quote red fox jumped over the lazy brown dogs.", "lowerfilt1", "y");
+    index(id, "21", "lowerfilt", "The court red fox jumped over the lazy brown dogs.", "lowerfilt1", "y");
+    index(id, "22", "lowerfilt", "The quote red fox jumped over the lazy brown dogs.", "lowerfilt1", "y");
+    index(id, "23", "lowerfilt", "The quote red fox jumped over the lazy brown dogs.", "lowerfilt1", "y");
+    index(id, "24", "lowerfilt", "The file red fox jumped over the lazy brown dogs.", "lowerfilt1", "y");
+    index(id, "25", "lowerfilt", "rod fix", "lowerfilt1", "y");
     
     commit();
 
@@ -132,5 +137,30 @@ public class DistributedMLTComponentTest extends BaseDistributedSearchTestCase {
         MoreLikeThisParams.MIN_DOC_FREQ, 1, "sort", "id desc", "mlt", "true",
         "mlt.fl", "lowerfilt", "qt", requestHandlerName, "shards.qt",
         requestHandlerName, "mlt.count", "20");
+
+    // let's query by specifying multiple mlt.fl as comma-separated values
+    QueryResponse response = query("q", "lowerfilt:moon", "fl", id, MoreLikeThisParams.MIN_TERM_FREQ, 2,
+        MoreLikeThisParams.MIN_DOC_FREQ, 1, "sort", "id desc", "mlt", "true",
+        "mlt.fl", "lowerfilt1,lowerfilt", "qt", requestHandlerName, "shards.qt",
+        requestHandlerName, "mlt.count", "20");
+    NamedList<Object> moreLikeThis = (NamedList<Object>) response.getResponse().get("moreLikeThis");
+    Map<String, Long> idVsMLTCount = new HashMap<>();
+    for (Map.Entry<String, Object> entry : moreLikeThis) {
+      SolrDocumentList docList = (SolrDocumentList) entry.getValue();
+      idVsMLTCount.put(entry.getKey(), docList.getNumFound());
+    }
+
+    // let's query by specifying multiple mlt.fl as multiple request parameters
+    response = query("q", "lowerfilt:moon", "fl", id, MoreLikeThisParams.MIN_TERM_FREQ, 2,
+        MoreLikeThisParams.MIN_DOC_FREQ, 1, "sort", "id desc", "mlt", "true",
+        "mlt.fl", "lowerfilt1", "mlt.fl", "lowerfilt", "qt", requestHandlerName, "shards.qt",
+        requestHandlerName, "mlt.count", "20");
+    moreLikeThis = (NamedList<Object>) response.getResponse().get("moreLikeThis");
+    for (Map.Entry<String, Object> entry : moreLikeThis) {
+      String key = entry.getKey();
+      Long expected = idVsMLTCount.get(key);
+      Long actual = ((SolrDocumentList) entry.getValue()).getNumFound();
+      assertEquals("MLT mismatch for id=" + key, expected, actual);
+    }
   }
 }
