@@ -51,6 +51,8 @@ Bug Fixes
 * SOLR-7046: NullPointerException when group.function uses query() function.
   (Jim Musil via Erick Erickson)
 
+* SOLR-7072: Multiple mlt.fl does not work. (Constantin Mitocaru, shalin)
+
 Optimizations
 ----------------------
  * SOLR-7049: Move work done by the LIST Collections API call to the Collections
